Added more tests. Some existing ones needed adjustment and removed towerFast for the moment